# jd-fit-evaluator

./: .env.example  .gitignore  ACCEPTANCE_TEST_RESULTS.md  Makefile  OPTIMIZATION_SUMMARY.md  OPTIMIZED_FINAL_RUN_README.md  PR_TEMPLATE.md  README.md  acceptance_test.sh  acceptance_test_title_matching.sh  acceptance_test_train_cli_schema.sh  baseline_tests.txt  constraints-cli.txt  coverage.json  legacy_imports_bare.txt  legacy_imports_parsing.txt  legacy_imports_src.txt  new_scoring_files.txt  old_scoring_files.txt  optimized_config.env  optimized_final_run.py  path_hacks.txt  payload.json  pyproject.toml  pytest.ini  requirements.txt  scoring_diff_summary.txt  setup_final_run.sh  test_cli.py  test_direct.py  test_manual_verification.py  test_taxonomy.py  validate_optimization.py
.github/: copilot-instructions.md
app/: api.py
archive/: LEGACY_DO_NOT_USE.md  legacy_cli.py  legacy_config.py  legacy_embeddings.py
archive/tools/: create_name_mapping.py  enrich_manifest_names.py  extract_more_names.py  rebuild_manifests.py  smart_rebuild_manifests.py
data/: labels.csv
data/sample/: jd.txt  (+3 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION.md  PRD.md  PRD_v1.1.md  PRD_v1.2.md  PRD_v1.3.md  PRD_v1.md  config.md
scripts/: compare_etl_functions.py  delete_legacy_etl.sh  install_hooks.sh  migrate_imports.py  smoke_final_run.sh  validate_pr2.sh  verify_dependencies.py  verify_manifest_ingest.sh  verify_migration.sh
src/: cli.py  config.py
tests/: __init__.py  conftest.py  test_api.py  test_cli_exit.py  test_config.py  test_embeddings_batch.py  test_embeddings_concurrent.py  test_etl_unified.py  test_rationale_snapshot.py  test_schema_migrate.py  test_score_sample.py  test_scores_golden.py  test_scoring_features.py  test_scoring_integration.py  test_stints_llm.py  test_tenure_merge.py  test_title_normalizer.py
tools/: README.md  README_ENRICH_NAMES.md  README_SPLIT_RESUMES.md  create_name_mapping.py  enrich_manifest_names.py  extract_more_names.py  rebuild_manifests.py  requirements.txt  smart_rebuild_manifests.py  split_resumes_and_manifest.py
ui/: __init__.py  app.py  constants.py
(+83 files in other folders)
