[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-fit-evaluator"
version = "0.1.0"
description = "Evaluate candidate–JD fit with multi-signal scoring"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "FoundryHR"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pandas>=2.2",
  "numpy>=1.26",
  "tqdm>=4.66",
  "httpx>=0.27",
  "tenacity>=8.5",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-xdist>=3.6", "ruff>=0.5", "coverage>=7.6"]
openai = ["openai>=1.0"]
ollama = ["requests>=2.31"]
all = ["openai>=1.0", "requests>=2.31"]

[project.scripts]
jd-fit = "jd_fit_evaluator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]