[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jd-fit-evaluator"
version = "0.1.0"
description = "Evaluate candidate–JD fit with multi-signal scoring"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "FoundryHR"}]
dependencies = [
  # Core framework
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  
  # CLI and UI
  "typer>=0.12",
  "rich>=13.0",
  "streamlit>=1.28",
  
  # API
  "fastapi>=0.115",
  "uvicorn>=0.30",
  
  # Data processing
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  
  # Document parsing
  "python-docx>=1.1.0",
  "pdfminer.six>=20231228",
  
  # Utilities
  "tenacity>=8.5",
  "jinja2>=3.1",
  "requests>=2.31",
  "tqdm>=4.66",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "pytest-xdist>=3.6",
  "ruff>=0.5",
  "coverage>=7.6",
  "black>=23.0",
]
openai = ["openai>=1.0"]
ollama = ["requests>=2.31"]
all = ["openai>=1.0", "requests>=2.31"]

[project.scripts]
jd-fit = "jd_fit_evaluator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]